# SimpleRenderer-C

./: .gitignore  CMakeLists.txt  README.md
res/Texture/: Cobblestone_pavement_normal_texture.avif
src/: main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Color.h  Framebuffer.cpp  Framebuffer.h
src/math/: Math.h
src/platform/: InputState.h  Win32Window.cpp  Win32Window.h
src/renderer/: Material.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Vertex.h
src/scenes/: TestScene.cpp  TestScene.h
